# lite-vllm

./: .gitignore  README.md  pyproject.toml
benchmark_results/chunked_prefill/: chunked_prefill_compare.json
benchmark_results/chunked_prefill/chunked_off/: continuous_batching.json  gpu_samples.csv  gpu_utilization.json  kv_cache.json  latency.json  pagedattention_fragmentation.json  step_stats.csv  throughput.json
benchmark_results/chunked_prefill/chunked_on/: continuous_batching.json  gpu_samples.csv  gpu_utilization.json  kv_cache.json  latency.json  step_stats.csv  throughput.json
benchmark_results/prefix_cache/: prefix_cache_summary.json  prefix_cache_trace.json
examples/: __init__.py  async_streaming.py  basic.py  bench_chunked_prefill.py  bench_continuous_batching.py  bench_paged_attention.py  system_metrics_bench.py  test_chunked_prefill.py  test_continuous_batching.py  test_pagedattention.py  test_prefix_cache.py
litevllm/: __init__.py  __main__.py
litevllm/cache/: __init__.py  block_manager.py  kv_cache.py  prefix_cache.py
litevllm/config/: __init__.py  config.py
litevllm/engine/: __init__.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
litevllm/entrypoints/: __init__.py  async_llm.py  llm.py
litevllm/layers/: __init__.py  attention.py  linear.py  rotary_emb.py  sampler.py
litevllm/models/: __init__.py  base.py  llama.py  qwen3.py
litevllm/tokenizer/: __init__.py  tokenizer.py
tests/: test_block_manager.py  test_config.py  test_prefix_cache.py  test_rotary_emb.py  test_sampler.py  test_scheduler.py
(+8 files in other folders)
