[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litevllm"
version = "0.1.0"
description = "A lightweight, single-GPU vLLM-style LLM inference engine: PagedAttention + Continuous Batching + Chunked Prefill, with a Triton sampler."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "triton>=2.2",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.19.0",
    "numpy>=1.24.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
litevllm = "litevllm.entrypoints.llm:main"

[tool.setuptools.packages.find]
include = ["litevllm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
